--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,9 +1,5 @@
 name: GitHub Actions Demo
-on:
-  push:
-    branches: [$default-branch]
-  pull_request:
-    branches: [$default-branch]
+on: [pull_request]
 env:
   SOLUTION_FILE_PATH: ./CICD
   BUILD_CONFIGURATION: Development
