--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,8 @@
 name: GitHub Actions Demo
-on: [pull_request]
+
+on:
+  pull_request:
+    types: [opened, reopened]
 env:
   SOLUTION_FILE_PATH: ./CICD
   BUILD_CONFIGURATION: Development
