--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -1,15 +1,17 @@
 name: Build and deploy ASP.Net Core app to an Azure Web App
 
-env:
-  AZURE_WEBAPP_NAME: hgcicddemo 
-  AZURE_WEBAPP_PACKAGE_PATH: './CICD'  
-  DOTNET_VERSION: '5.*' 
-
 on:
   push:
     branches:
       - main
   workflow_dispatch:
+
+env:
+  SOLUTION_FILE_PATH: ./CICD
+  BUILD_CONFIGURATION: Development
+  AZURE_WEBAPP_NAME: hgcicddemo
+  AZURE_WEBAPP_PACKAGE_PATH: "./CICD"
+  DOTNET_VERSION: "5.*"
 
 jobs:
   build:
@@ -22,7 +24,7 @@ jobs:
         uses: actions/setup-dotnet@v2
         with:
           dotnet-version: ${{ env.DOTNET_VERSION }}
-      
+
       - name: Set up dependency caching for faster builds
         uses: actions/cache@v3
         with:
@@ -32,10 +34,10 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build ${{env.SOLUTION_FILE_PATH}} --configuration ${{BUILD_CONFIGURATION}}
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/CICD
+        run: dotnet publish ${{env.SOLUTION_FILE_PATH}} --configuration ${{BUILD_CONFIGURATION}} -o ${{env.DOTNET_ROOT}}/CICD
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -47,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Development'
+      name: "Development"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
