--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -34,10 +34,10 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Build with dotnet
-        run: dotnet build ${{env.SOLUTION_FILE_PATH}} --configuration ${{BUILD_CONFIGURATION}}
+        run: dotnet build ${{env.SOLUTION_FILE_PATH}} --configuration ${{env.BUILD_CONFIGURATION}}
 
       - name: dotnet publish
-        run: dotnet publish ${{env.SOLUTION_FILE_PATH}} --configuration ${{BUILD_CONFIGURATION}} -o ${{env.DOTNET_ROOT}}/CICD
+        run: dotnet publish ${{env.SOLUTION_FILE_PATH}} --configuration ${{env.BUILD_CONFIGURATION}} -o ${{env.DOTNET_ROOT}}/CICD
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
