--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   SOLUTION_FILE_PATH: ./CICD
-  BUILD_CONFIGURATION: Development
+  BUILD_CONFIGURATION: Debug
 
 permissions:
   contents: read
