--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -39,4 +39,4 @@ jobs:
         run: nuget install NUnit.ConsoleRunner -Version 3.13.0 -DirectDownload -OutputDirectory .
 
       - name: Run UnitTests
-        run: ./NUnit.ConsoleRunner.3.13.0/tools/nunit3-console.exe  ./UsingStubsTest/bin/Debug/net5.0/CreatingMocks.UnitTest.dll
+        run: ./NUnit.ConsoleRunner.3.13.0/tools/nunit3-console.exe  UsingStubsTest/bin/Debug/net5.0/CreatingMocks.UnitTest.dll
