--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   SOLUTION_FILE_PATH: ./CICD
-  BUILD_CONFIGURATION: Development
+  BUILD_CONFIGURATION: Release
   AZURE_WEBAPP_NAME: hgcicddemo
   AZURE_WEBAPP_PACKAGE_PATH: "./CICD"
   DOTNET_VERSION: "5.*"
