--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -10,7 +10,7 @@ env:
   SOLUTION_FILE_PATH: ./CICD
   BUILD_CONFIGURATION: Release
   AZURE_WEBAPP_NAME: hgcicddemo
-  AZURE_WEBAPP_PACKAGE_PATH: "./CICD"
+  AZURE_WEBAPP_PACKAGE_PATH: ".net-app"
   DOTNET_VERSION: "5.*"
 
 jobs:
