--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -37,6 +37,9 @@ jobs:
 
       - name: Install NUnit.ConsoleRunner
         run: nuget install NUnit.ConsoleRunner -Version 3.13.0 -DirectDownload -OutputDirectory .
+        
+      - name: List files in the repository
+        run: dir ./
 
       - name: Run UnitTests
         run: ./NUnit.ConsoleRunner.3.13.0/tools/nunit3-console.exe  UsingStubsTest/bin/Debug/net5.0/CreatingMocks.UnitTest.dll
