--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Development"
+      name: "Release"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -57,6 +57,9 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: .net-app
+        
+      - name: List files in the repository
+        run: ls ${{ github.workspace }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
