--- a/.github/workflows/azure-webapps-dotnet-core.yml
+++ b/.github/workflows/azure-webapps-dotnet-core.yml
@@ -10,7 +10,7 @@ env:
   SOLUTION_FILE_PATH: ./CICD
   BUILD_CONFIGURATION: Release
   AZURE_WEBAPP_NAME: hgcicddemo
-  AZURE_WEBAPP_PACKAGE_PATH: ".net-app"
+  AZURE_WEBAPP_PACKAGE_PATH: './CICD'
   DOTNET_VERSION: "5.*"
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
         run: dotnet build ${{env.SOLUTION_FILE_PATH}} --configuration ${{env.BUILD_CONFIGURATION}}
 
       - name: dotnet publish
-        run: dotnet publish ${{env.SOLUTION_FILE_PATH}} --configuration ${{env.BUILD_CONFIGURATION}} -o ${{env.DOTNET_ROOT}}/CICD
+        run: dotnet publish ${{env.SOLUTION_FILE_PATH}} --configuration ${{env.BUILD_CONFIGURATION}} -o '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp' 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -67,4 +67,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          package: package: '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}/myapp'
